--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   permission_handler: ^11.3.1
   get_it: ^7.7.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
